--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.4.0",
-    "react-stripe-checkout": "^2.6.3"
+    "react-stripe-checkout": "^2.6.3",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
