added rapidAPI key

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3000
 STRIPE_PK_KEY=pk_test_Holia2SIPb4TyaGCjfe5Npwe00cTjwGUOp
 STRIPE_SK_KEY=sk_test_m3xSP80lcFAfa7TmxbIk9wpp00noe7q6no
+
+API2CART_API_KEY = 9d1ff256450d369d45e03954cb1781ba
+API2CART_STORE_KEY = cfce78a77cc4r46ab02ca75aee5d4398
