--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.9.0",
+    "react-rectangle": "^1.3.3",
     "react-scripts": "^3.4.0",
     "react-stripe-checkout": "^2.6.3",
     "reactstrap": "^8.4.1"
