--- a/frontend/dropent/package.json
+++ b/frontend/dropent/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "@material-ui/core": "^4.9.8",
+    "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.9.0",
+    "react-rectangle": "^1.3.3",
+    "react-scripts": "^3.4.0",
+    "react-stripe-checkout": "^2.6.3",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
