fixed prices.py code

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ cryptography==2.6.1
 enum34==1.1.6
 excel==1.0.0
 future==0.17.1
+google-search-results-serpwow==1.1.8
 idna==2.9
 ipaddress==1.0.22
 lxml==4.5.0
