--- a/frontend/dropent/package.json
+++ b/frontend/dropent/package.json
@@ -1,31 +1,20 @@
 {
-  "name": "dropent",
+  "name": "react-firebase-auth-example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.8",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.4.1",
-    "google-search-results-serpwow": "0.0.12",
-    "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0",
-    "react-dom": "^16.9.0",
-    "react-rectangle": "^1.3.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
-    "react-stripe-checkout": "^2.6.3",
-    "reactstrap": "^8.4.1"
+    "firebase": "^5.0.4",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-powerplug": "^1.0.0-alpha.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
