--- a/frontend/dropent/package.json
+++ b/frontend/dropent/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
     "firebase": "^5.0.4",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-powerplug": "^1.0.0-alpha.7",
+    "react-rectangle": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
