--- a/frontend/dropent/package.json
+++ b/frontend/dropent/package.json
@@ -4,21 +4,18 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.8",
-    "firebase": "^5.0.4",
+    "bootstrap": "^4.4.1",
+    "firebase": "^4.12.1",
     "react": "^16.4.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.4.0",
     "react-powerplug": "^1.0.0-alpha.7",
     "react-rectangle": "^1.3.3",
-<<<<<<< HEAD
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
     "react-stripe-checkout": "^2.6.3",
     "reactstrap": "^8.4.1",
     "recharts": "^1.8.5"
-=======
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
->>>>>>> bf0f104569b74c5df0f82c41718bd2bb2d98d1f7
   },
   "scripts": {
     "start": "react-scripts start",
