--- a/frontend/dropent/package.json
+++ b/frontend/dropent/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.9.8",
     "bootstrap": "^4.4.1",
     "firebase": "^4.12.1",
+    "google-search-results-serpwow": "0.0.12",
     "react": "^16.4.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.4.0",
